--- a/gridney.scss
+++ b/gridney.scss
@@ -3,7 +3,7 @@
 // URL:
 // License:
 
-// Mediaquery table
+// Mediaquery definitions
 @import "mediaqueries";
 
 // Config variables
@@ -14,4 +14,3 @@
 
 // Grid generator and human-readable sizes
 @import "grid";
-@import "sizes";
