--- a/_grid.scss
+++ b/_grid.scss
@@ -1,6 +1,7 @@
 // =========================================================================
 // Grid skeleton
 // =========================================================================
+
 %grid {
   letter-spacing: -.31em; // webkit: collapse white-space between units
   word-spacing: -.43em\0; // IE9 + Opera
@@ -36,4 +37,18 @@
   // spaces between units, padding to take advantage of
   // border-box box sizing
   padding-left: $gutter;
+}
+
+// explicit sizes for grids and media queries
+@if $explicit == true {
+  .grid, .g { @extend %grid; }
+  .g-col    { @extend %col; }
+
+  @if $responsive == true {
+    @include build-responsive();
+    @include build-sizes($proportions-limit);
+  }
+  @else {
+    @include build-sizes($proportions-limit);
+  }
 }
