--- a/_mediaqueries.scss
+++ b/_mediaqueries.scss
@@ -1,26 +1,21 @@
-// If your grid is RESPONSIVE you need to choose some BREAKPOINTS, Gridney
-// provides you some predefined breakpoints but you can add as more as you
-// need, fill this table to easily create your mediaqueries definitions
 // =========================================================================
+// Mediaqueries definitions ready to use with gridney
+// =========================================================================
+$mobile-name: mobile;
+$mobile-shortcut: m;
+$mobile-mq: "(max-width: 480px)";
+// Order Convention -> name shortcut? mediaquery (shortcut is optional)
+$mobile: $mobile-name $mobile-shortcut $mobile-mq;
 
-// ------------------------------------------------------------------------------------------
-// Breakpoint name, shortcut and mediaquery     | min-width             | max-width
-// ------------------------------------------------------------------------------------------
-   $mobile: mobile;                                                       $mobile-max: 480px;
-   $mobile-shortcut: m;
+$tablet-name: tablet;
+$tablet-shortcut: t;
+$tablet-mq: "(min-width: 481px) and (max-width: 720px)";
+// Order Convention -> name shortcut? mediaquery (shortcut is optional)
+$tablet: $tablet-name $tablet-shortcut $tablet-mq;
 
-   $tablet: tablet;                               $tablet-min: 481px;     $tablet-max: 720px;
-   $tablet-shortcut: t;
-
-   $mobile-up: mobile-up;
-   $mobile-up-shortcut: m-up;
-
-   // custom breakpoints
-   $breakpoint-1: breakpoint-1;
-   $breakpoint-1-shortcut: b1;
-
-
-// Mediaqueries based on the above table
-// -------------------------------------------------------------------------------------------
-$mobile-mq: "(max-width:#{$mobile-max})";
-$tablet-mq: "(min-width: #{$tablet-min}) and (max-width: #{$tablet-max})";
+// Custom breakpoints
+$breakpoint-1-name: breakpoint-1;
+$breakpoint-1-shortcut: b1;
+$breakpoint-1-mq: "(min-width: 1200px)";
+// Order Convention -> name shortcut? mediaquery (shortcut is optional)
+$breakpoint-1: $breakpoint-1-name $breakpoint-1-shortcut $breakpoint-1-mq;
