Improved README, better info in gridney scss

--- a/gridney.scss
+++ b/gridney.scss
@@ -1,7 +1,24 @@
-// Gridney by Marcio Barrios, @marciobarrios
-// Version: 0.1
-// URL:
-// License:
+/**
+* Gridney framework
+* =====================================================
+*
+* Gridney is a flexible grid framework to help you build
+* your site easily for different devices
+*
+* Version: 0.1
+*
+* Github repository:
+* https://github.com/hunab/gridney.git
+*
+* Website:
+* http://...
+*
+* Built with passion by @marciobarrios
+* http://marciobarrios.com
+*
+* Free to use under the MIT license:
+* http://www.opensource.org/licenses/mit-license.php
+*/
 
 // Mediaquery definitions
 @import "mediaqueries";
